# unified-rag-knowledge-assistant

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: config.py  main.py
backend/services/: chunker.py  embeddings.py  llm.py  loader.py  retriever.py  vectorstore.py
frontend/: app.py
